--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,4 @@
-/*
-
-This CSS file will be included with your plugin, and
-available in the app when your plugin is enabled.
-
-If your plugin does not need CSS, delete this file.
-
-*/
+.callout[data-callout="spoiler"] {
+    --callout-color: 138, 92, 245;
+    --callout-icon: lucide-shield-alert;
+}
